[POD-1275] - bins metadata no longer overlaps with the boxes table

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -220,7 +220,7 @@ tr.even {
 }
 
 #bin_div, #box_div, #spreadsheet_div {
-  width: 25%;
+  width: 45%;
 }
 
 #associated_div {
